# to-do-list

./: .env.example  .gitignore  docker-compose.yaml  manage.py  pyproject.toml
config/: asgi.py  env.py  settings.py  urls.py  wsgi.py
config/django/: base.py
config/settings/: celery.py  email.py
tasks/: models.py
tasks/api/: serializers.py  views.py
tasks/migrations/: 0001_initial.py
to_do_list/: settings.py
todolist/api/: urls.py
todolist/api/v1/: exceptions.py  handlers.py  mixins.py  pagination.py  permissions.py  urls.py
todolist/api/v1/tasks/: serializers.py  urls.py  views.py
todolist/api/v1/todos/: serializers.py  urls.py  views.py
todolist/async_tasks/: celery.py
todolist/tasks/: admin.py  apps.py  filters.py  models.py  selectors.py  services.py
todolist/tasks/migrations/: 0001_initial.py  0002_alter_task_description.py
todolist/tasks/tests/: factories.py  integration_tests.py  test_selectors.py  test_services.py  test_views.py
todolist/todos/: admin.py  apps.py  models.py  selectors.py  services.py
todolist/todos/migrations/: 0001_initial.py  0002_alter_todolist_description_alter_todolist_owner.py
todolist/todos/tests/: factories.py  test_selectors.py  test_services.py  test_views.py
todos/: models.py
todos/api/: serializers.py  urls.py  views.py
todos/migrations/: 0001_initial.py
