[project]
name = "todolist_api"
version = "1.0.0"
requires-python = ">=3.11"
dependencies = [
    "django>=5.2.15",
    "django-environ>=0.13.0",
    "django-filter>=25.2",
    "djangorestframework>=3.17.1",
    "djangorestframework-simplejwt>=5.5.1",
    "drf-spectacular>=0.29.0",
    "psycopg2-binary>=2.9.12",
]

[tool.ruff.lint]
ignore = ["F403"]

[dependency-groups]
dev = [
    "factory-boy>=3.3.3",
    "ruff>=0.15.16",
]
