[project]
name = "todolist_api"
version = "1.0.0"
requires-python = ">=3.11"
dependencies = [
    "celery>=5.6.3",
    "django>=5.2.15",
    "django-celery-beat>=2.9.0",
    "django-celery-results>=2.6.0",
    "django-environ>=0.13.0",
    "django-filter>=25.2",
    "djangorestframework>=3.17.1",
    "djangorestframework-simplejwt>=5.5.1",
    "drf-spectacular>=0.29.0",
    "psycopg2-binary>=2.9.12",
]

[tool.ruff.lint]
ignore = ["F403","E402"]

[dependency-groups]
dev = [
    "factory-boy>=3.3.3",
    "ruff>=0.15.16",
]
